--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/estilo.css">
-  <title></title>
+  <title>BOLO DE MILHO</title>
 </head>
 <body>
   <script src="js/script.js"></script>
+   <h1>BOLO DE MILHO</h1>
+   <p>Ingredientes</p>
+   <ul> 
+    <li>1 xícara(chá) de açúcar</li>
+    <li>2 ovos</li>
+    <li>1 xícara(chá) de leite</li>
+    <li>1 colher(sopa) de fermento em pó</li>
+    <li>Canela em pó para polvilhar</li>
+    <li>¾ xícara(chá) de margarina Deline</li>
+    <li>1 lata de milho verde escorrido ou 2 espigas de milho debulhadas</li>
+    <li>1 xícara(chá) de fubá</li>
+    <li>Açúcar para polvilhar</li>
+  </ul>
+
+  <h2>Como fazer passo a passo </h2>
+
+  <ul> 
+    <li>Em um liquidificador </li>
+    <li>bata o açúcar com a margarina e os ovos</li>
+    <li>Adicione o milho verde</li>
+    <li>o leite de coco e por último o fubá</li>
+    <li>Bata delicadamente e acrescente o fermento</li>
+    <li>Misture e despeje a massa em uma forma redonda com furo central (tamanho: 24cm de diâmetro) untada levemente com margarina e polvilhada com açúcar e canela.</li>
+  </ul>
+ 
+   <img   src="./img/thumb-video.jpg" alt="uma imagen de bolo">
+
+   <p>Leve para assar em forno preaquecido (180°C) por cerca de 30 minutos ou até que ao espetar um palito este saia limpo.
+     Retire do forno, espere amornar e desenforme. 
+     Se desejar, polvilhe mais canela em pó no bolo desenformado.</p>
 </body>
 </html>
